--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -63,7 +63,8 @@
               onsubmit="return validate();"
             >
               <div
-                class="formData">
+                class="formData"
+>
                 <label>Prénom</label><br>
                 <input
                   class="text-control"
@@ -72,9 +73,10 @@
                   name="first"
                   minlength="2"
                 /><br>
+                <span id="errorFirstName"></span>
               </div>
               <div
-                class="formData">
+                class="formData"">
                 <label>Nom</label><br>
                 <input
                   class="text-control"
