--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -78,7 +78,7 @@
                 <span id="errorFirstName"></span>
               </div>
               <div
-                class="formData"">
+                class="formData">
                 <label for="last">Nom</label><br>
                 <input
                   class="text-control"
@@ -117,6 +117,7 @@
                 <span id="errorQuantity"></span>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
+
               <div
                 class="formData">
                 <input
@@ -202,6 +203,7 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
+                <span id="errorCheckbox1"></span>
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
