--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -65,8 +65,7 @@
               onsubmit="return validate();"
             >
               <div
-                class="formData"
->
+                class="formData">
                 <label for="first">Prénom</label><br>
                 <input
                   class="text-control"
