--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -74,7 +74,7 @@
                   name="first"
                   minlength="2"
                 /><br>
-                <span id="errorFirstName"></span>
+                <!-- <span id="errorFirstName"></span> -->
               </div>
               <div
                 class="formData">
@@ -85,7 +85,7 @@
                   id="last"
                   name="last"
                 /><br>
-                <span id="errorLastName"></span>
+                <!-- <span id="errorLastName"></span> -->
               </div>
               <div
                 class="formData">
@@ -96,7 +96,7 @@
                   id="email"
                   name="email"
                 /><br>
-                <span id="errorEmail"></span>
+                <!-- <span id="errorEmail"></span> -->
               </div>
               <div
                 class="formData">
@@ -107,13 +107,13 @@
                   id="birthdate"
                   name="birthdate"
                 /><br>
-                <span id="errorBirthdate"></span>
+                <!-- <span id="errorBirthdate"></span> -->
               </div>
               <div
                 class="formData">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
-                <span id="errorQuantity"></span>
+                <!-- <span id="errorQuantity"></span> -->
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
 
@@ -185,7 +185,8 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
-              <span id="errorLocation1"></span>
+                <br>
+              <!-- <span id="errorLocation1"></span> -->
 
               </div>
 
@@ -202,7 +203,7 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <span id="errorCheckbox1"></span>
+                <!-- <span id="errorCheckbox1"></span> -->
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
